--- a/web_flask/templates/8-cities_by_states.html
+++ b/web_flask/templates/8-cities_by_states.html
@@ -9,7 +9,7 @@
         {% for state in states %}
             <LI>{{ state.id }}:</LI>
             <UL>
-            {% for city in cities %}
+            {% for state in states %}
             <LI><B>{{ city.name }}</B></LI>
             {% endfor %}
             </UL>
